force-app/main/default/objects/Sales_Order__c/fields/Editable_Until__c.field-meta.xml
<CustomField>
    <fullName>Editable_Until__c</fullName>
    <label>Editable Until</label>
    <type>DateTime</type>
</CustomField>