force-app/main/default/objects/Sales_Order__c/fields/Is_Joint_Work_Call__c.field-meta.xml
<CustomField>
    <fullName>Is_Joint_Work_Call__c</fullName>
    <label>Is Joint-Work Call</label>
    <defaultValue>false</defaultValue>
    <type>Checkbox</type>
</CustomField>