force-app/main/default/objects/Sales_Order__c/fields/Is_Telephonic__c.field-meta.xml
<CustomField>
    <fullName>Is_Telephonic__c</fullName>
    <label>Is Telephonic</label>
    <defaultValue>false</defaultValue>
    <type>Checkbox</type>
</CustomField>