force-app/main/default/objects/Sales_Order__c/fields/SAP_PO_No__c.field-meta.xml
<CustomField>
    <fullName>SAP_PO_No__c</fullName>
    <label>SAP PO No</label>
    <length>50</length>
    <type>Text</type>
</CustomField>