force-app/main/default/objects/Sales_Order__c/fields/Total_Qty__c.field-meta.xml
<CustomField>
    <fullName>Total_Qty__c</fullName>
    <label>Total Qty (Cases)</label>
    <type>Number</type>
    <precision>16</precision>
    <scale>2</scale>
</CustomField>